# cookiecutter-pytorch-lightning

./: .gitignore  README.md  cookiecutter.json  environment.yml  mypy.ini  pyproject.toml
project_x/pl/: lightning_data_module.py
scripts/: test.py  train.py
tests/: conftest.py
tests/integration/: test_data.py
{{cookiecutter.directory_name}}/: .gitignore  README.md  environment.yml  mypy.ini  pyproject.toml
{{cookiecutter.directory_name}}/config/: experiments.yml
{{cookiecutter.directory_name}}/scripts/: _train.sh  experiments.py  test.py  train.py
{{cookiecutter.directory_name}}/tests/: conftest.py
{{cookiecutter.directory_name}}/{{cookiecutter.project_name}}/pl/: __init__.py  lightning_module.py
{{cookiecutter.directory_name}}/{{cookiecutter.project_name}}/utils/: utils.py
{{cookiecutter.directory_name}}/{{cookiecutter.project_slug}}/pl/: lightning_module.py
{{cookiecutter.project_name}}/models/: simple_classifier.py
